@@ -73,6 +73,6 @@ DIST netbeans-websvc-6.0.tar.bz2 21262337 RMD160 aa0eea92a59cad8c5907c9a5be41a1a
 DIST netbeans-xml-6.0.tar.bz2 4404173 RMD160 6360765b44e988fb1ad4e529630ac1abbc4dae9d SHA1 92f489b03154a8153f8508387886afb9fbfa1959 SHA256 5d63287da3cfc42cbfb24ab619d1e96ff625124e1225c5377aa5d8c22deaecd9
 EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
 EBUILD netbeans-6.1-r1.ebuild 16545 RMD160 ae5471ae840869fbc962fceb48f8ee811efae729 SHA1 d4782ff9271907bbb98e64029be47bfce3d8677a SHA256 b5ffe94c7e7f66a7981c076c54fdc847a5773f4cf890c789935fbaee07299c2e
-EBUILD netbeans-6.5_beta.ebuild 17701 RMD160 1cade8331913a2a5d1f1ab11d6074517a1582802 SHA1 77a5f50cc48cc540545e780c8d2b86495d770ec4 SHA256 dca7b4dce373d2e81599f93ce029faf9347d34402f65313ddcaaf7f2342dc914
-MISC ChangeLog 24051 RMD160 4c985cf27c9ae8a626947f3f910a98e6ea1c11f8 SHA1 8eb865bd610bf14d350c681ccc8a746ba355009b SHA256 13abbe2105c4a944df3e351da6e2d176bda5ddf13d9853062e1ac86f5dd98f86
+EBUILD netbeans-6.5_beta.ebuild 18228 RMD160 c7f21c0ede3c58cc771bbf7d782c802f51b1783d SHA1 e60d233f9a491462a7f78dba2e63a56cbd975b0a SHA256 9a9f20117067f8365cb86ae4b5765cb2aebe3ecbd81429572b966a31af1aa10a
+MISC ChangeLog 24176 RMD160 d7f6045c7ccc3d16173545b9bb20ee0b259df4ba SHA1 5213304a43f6f51ab4d97cb31bcabfeaf84e7583 SHA256 73e15f85b59e9e44a029c11f003b30f238daf29999ad625177f7a2227e9a0355
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
